# sliding

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
programs/: __init__.py  compare.py  convolution_test.py  frederic_convolution.py  sospice_generic_filter.py  sospice_sigma_clipping.py  testing_median_speeds.py
programs/median/: __init__.py  testing_median_speeds.py
programs/sigma_clipping/: __init__.py  compare_clipping.py  convolution.py  fast_sigma_clipping.py  old_sigma_clipping.py  sigma_clipping.py  sigma_clipping_test.py
programs/sliding_mode/: __init__.py  sliding_mean.py
programs/standard_deviation/: __init__.py  compare.py  convolution.py  convolve_1d.py  convolve_3d.py  fast_standard_deviation.py  frederic_convolution.py  sospice_generic_filter.py  using_roll.py
programs/tests/: sliding_mean.py  test_borders.py  test_comparison.py  test_mean_median.py  test_mixed.py  test_sigmaclipping.py  test_standard_deviation.py  testing.ipynb  utils_tests.py
sliding/: __init__.py
sliding/convolution/: __init__.py  convolution.py  padding.py
sliding/mode/: __init__.py  sliding_mean.py  sliding_median.py
sliding/sigma_clipping/: __init__.py  sigma_clipping.py
sliding/standard_deviation/: __init__.py  standard_deviation.py
src/sliding/: __init__.py
tests/: __init__.py  running.py  test_borders.py  test_known_array.py  test_mean_median.py  test_sigma_clipping.py  test_sigmaclipping.py  test_standard_deviation.py  test_weights_no_nans.py  testing.ipynb
tests/manual/: check_duration.py
tests/utils/: __init__.py  utils_tests.py  (+1 more)
(+27 files in other folders)
